<resources>
    <string name="app_name">WeatherForecast</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="fullname_field_hint">Enter your full name</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="username_field_empty">Username can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="post_like_label">%1d Likes</string>

    <!--menu-->
    <string name="menu_home">Singapore</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>
    <string name="humidity">humidity</string>
    <string name="wind">wind</string>
    <string name="weather">weather</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="minTemp">Minimum Temp</string>
</resources>
