<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/labelHumidity"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="@+id/valueHumidity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/humidity" />

        <TextView
            android:id="@+id/valueHumidity"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="90dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toRightOf="@id/labelHumidity"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="67%" />

        <TextView
            android:id="@+id/labelWind"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelHumidity"
            tools:text="@string/wind" />

        <TextView
            android:id="@+id/valueWind"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="@id/valueHumidity"
            app:layout_constraintLeft_toRightOf="@id/labelWind"
            app:layout_constraintTop_toBottomOf="@id/valueHumidity"
            tools:text="Moderate, 13 mph NPS" />


        <TextView
            android:id="@+id/labelWeather"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelWind"
            tools:text="@string/weather" />

        <TextView
            android:id="@+id/valueWeather"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="@id/valueWind"
            app:layout_constraintLeft_toRightOf="@id/labelWeather"
            app:layout_constraintTop_toBottomOf="@id/valueWind"
            tools:text="Mostly sunny" />


        <TextView
            android:id="@+id/labelSunrise"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelWeather"
            tools:text="@string/sunrise" />

        <TextView
            android:id="@+id/valueSunrise"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="@id/valueWeather"
            app:layout_constraintLeft_toRightOf="@id/labelSunrise"
            app:layout_constraintTop_toBottomOf="@id/valueWeather"
            tools:text="7:15 am" />


        <TextView
            android:id="@+id/labelSunset"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelSunrise"
            tools:text="@string/sunset" />

        <TextView
            android:id="@+id/valueSunset"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="@id/valueSunrise"
            app:layout_constraintLeft_toRightOf="@id/labelSunset"
            app:layout_constraintTop_toBottomOf="@id/valueSunrise"
            tools:text="7:15 am" />

        <TextView
            android:id="@+id/labelMinTemp"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelSunset"
            tools:text="@string/minTemp" />

        <TextView
            android:id="@+id/valueMinTemp"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="@id/valueSunset"
            app:layout_constraintLeft_toRightOf="@id/labelMinTemp"
            app:layout_constraintTop_toBottomOf="@id/valueSunset"
            tools:text="55" />


        <TextView
            android:id="@+id/labelMaxTemp"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelMinTemp"
            tools:text="Maximum Temperature" />


        <TextView
            android:id="@+id/valueMaxTemp"
            style="@style/AppTheme.Body1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="@id/valueMinTemp"
            app:layout_constraintLeft_toRightOf="@id/labelMaxTemp"
            app:layout_constraintTop_toBottomOf="@id/valueMinTemp"
            tools:text="75" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
